--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -9,6 +9,7 @@
         <td>Title</td>
         <td>Description</td>
         <td>Creator </td>
+
       </tr>
     </thead>
     <tbody>
@@ -19,9 +20,9 @@
           <td><%= group.description %></td>
           <td> <%= group.user.email %> </td>
           <% if current_user && current_user == group.user %>
-             <%= link_to("Edit", edit_group_path(group), class: "btn btn-sm btn-default")%>
-             <%= link_to("Delete", group_path(group),    class: "btn btn-sm btn-default",
-                         method: :delete, data: { confirm: "Are you sure?" } )%>
+             <td><%= link_to("Edit", edit_group_path(group), class: "btn btn-sm btn-default")%></td>
+             <td><%= link_to("Delete", group_path(group),    class: "btn btn-sm btn-default",
+                         method: :delete, data: { confirm: "Are you sure?" } )%></td>
            <% end %>
         </tr>
       <% end %>
